--- a/index.html
+++ b/index.html
@@ -8,22 +8,42 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <!-- Psuedo Code -->
+
+    <!-- I need a semantic header element -->
+        <!-- I need to make a header tag -->
+        <!-- I need to have a heading tag -->
+        <!-- I need a nav tag w/ links -->
+
+        <!-- Changes made to the header -->
+            <!-- Switched out div class="header" for header tag -->
+            <!-- Got rid of span element within the <h1> tag -->
+            <!-- Added a nav tag within the div element within the header tag -->
+            <!-- Added "header" class to header tag -->
+
+    <header class="header">
+        <h1>Horiseon</h1>
         <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </div>
+    </header>
+
+    <!-- I need a semantic main element  -->
+    <!-- I need a semantic side element  -->
+    <!-- I need a semantic footer element  -->
+
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
