added <span> tag with class

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <!-- Got rid of span element within the <h1> tag -->
             <!-- Added a nav tag within the div element within the header tag -->
             <!-- Added "header" class to header tag -->
+            <!-- Added <span> tag back to h1 tag -->
 
     <header class="header">
-        <h1>Horiseon</h1>
+        <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <nav>
                 <ul>
@@ -40,11 +41,10 @@
         </div>
     </header>
 
-    <!-- I need a semantic main element  -->
-    <!-- I need a semantic side element  -->
-    <!-- I need a semantic footer element  -->
-
     <div class="hero"></div>
+
+    <!-- I need a semantic main element  -->
+
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -68,6 +68,9 @@
             </p>
         </div>
     </div>
+    <!-- I need a semantic side element  -->
+    <!-- I need a semantic footer element  -->
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
