--- a/index.html
+++ b/index.html
@@ -3,24 +3,18 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <link rel="stylesheet" href="./assets/css/style.css" type="css/text">
+    <!-- Added Title -->
+    <title>Horiseon SEO</title>
 </head>
 
 <body>
-    <!-- Psuedo Code -->
 
-    <!-- I need a semantic header element -->
-        <!-- I need to make a header tag -->
-        <!-- I need to have a heading tag -->
-        <!-- I need a nav tag w/ links -->
-
-        <!-- Changes made to the header -->
-            <!-- Switched out div class="header" for header tag -->
-            <!-- Got rid of span element within the <h1> tag -->
-            <!-- Added a nav tag within the div element within the header tag -->
-            <!-- Added "header" class to header tag -->
-            <!-- Added <span> tag back to h1 tag -->
+<!-- Changes made to the header -->
+    <!-- Switched out div class="header" for header tag -->
+    <!-- Added a nav tag within the div element within the header tag -->
+    <!-- Added "header" class to header tag -->
+    <!-- Added <span> tag back to h1 tag -->
 
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -30,9 +24,11 @@
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
                     </li>
+
                     <li>
                         <a href="#online-reputation-management">Online Reputation Management</a>
                     </li>
+
                     <li>
                         <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
@@ -41,65 +37,85 @@
         </div>
     </header>
 
-    <div class="hero"></div>
+    <div class="hero" alt="People around a desk working on a laptop"></div>
 
-    <!-- I need a semantic main element  -->
+<!-- Changes made to the Main -->
+    <!-- Added main tag with class = "content" -->
+    <!-- Added alt tags to the images -->
 
-    <div class="content">
+    <main class="content">
+
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization Picture" class="float-left"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management Picture" class="float-right"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
+
         </div>
+
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+
+            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing Picture" class="float-left"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <!-- I need a semantic side element  -->
-    <!-- I need a semantic footer element  -->
 
-    <div class="benefits">
+        </div>
+
+    </main>
+    
+<!-- I need a semantic side element  -->
+
+    <!-- Changes made to aside tag -->
+        <!-- Removed div class="benefits and replaced with aside class="benefits"  -->
+        <!-- Added alt attributes to images inside the aside tag -->
+
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Cost Management icon"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    </aside>
+
+<!-- I need a semantic footer element  -->
+
+    <!-- Changes made to footer tag -->
+    <!-- Switched div tag for footer tag -->
+
+    <footer class="footer">
+        <h4>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
