fixed issue with type attribute in stylesheet link code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css" type="css/text">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Added Title -->
     <title>Horiseon SEO</title>
 </head>
@@ -17,6 +17,7 @@
     <!-- Added <span> tag back to h1 tag -->
 
     <header class="header">
+        
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <nav>
@@ -37,7 +38,7 @@
         </div>
     </header>
 
-    <div class="hero" alt="People around a desk working on a laptop"></div>
+    <div class="hero"></div>
 
 <!-- Changes made to the Main -->
     <!-- Added main tag with class = "content" -->
