created reference variable for time-block class

--- a/HW5/index.html
+++ b/HW5/index.html
@@ -21,6 +21,9 @@
     </header>
     <div class="container">
         <!-- Timeblocks go here -->
+        <div class="time-block">
+
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -33,7 +36,7 @@
         // GIVEN I am using a daily planner to create a schedule
         // 
         // WHEN I open the planner
-        // THEN the current day is displayed at the top of the calendar
+        // THEN the current day is displayed at the top of the calendar: DONE
 
         // WHEN I scroll down
         // THEN I am presented with timeblocks for standard business hours
@@ -51,28 +54,16 @@
         // THEN the saved events persist
 
 
-
-
         // CODE
         // ==============================================================================================================
 
         // Global Variables
         const date = moment();
-        console.log(date.format("dddd\, MMMM Do\, YYYY"));
-        var timeBlock = $("time-block");
-        var hourEl = $("hour");
-        var pastEl = $("past");
-        var presentEl = $("present");
-        var futureEl = $("future");
-        var saveBtn = $("saveBtn");
         var time = ["9:00 AM", "10:00 AM", "11:00 AM", "12:00 PM", "1:00 PM", "2:00 PM", "3:00 PM", "4:00 PM", "5:00 PM"];
-
 
         // Reference Variables
         var currentDay = $("#current-day");
-        console.log(currentDay)
-
-
+        var timeBlock = $(".time-block")
 
         // Functions
 
@@ -81,14 +72,16 @@
             currentDay.text(moment().format("dddd, MMMM Do"))
         }
         displayDate()
-    // Display timeblocks 9 - 5 pm
 
-    // Color code timeblocks by past, present, and future
+        // Display timeblocks 9 - 5 pm
 
-    // When user clicks inside of timeblock they can input data
 
-    // User data gets saved to local storage
-    // Saved events persist
+        // Color code timeblocks by past, present, and future
+
+        // When user clicks inside of timeblock they can input data
+
+        // User data gets saved to local storage
+        // Saved events persist
 
     </script>
 </body>
