created divs for hour, description, and save

--- a/HW5/index.html
+++ b/HW5/index.html
@@ -22,7 +22,106 @@
     <div class="container">
         <!-- Timeblocks go here -->
         <div class="time-block">
+            <div class="row">
+                <!-- 9 AM -->
+                <div class="col-2 time-hour">
+                    9:00 AM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
 
+                <!-- 10 AM -->
+                <div class="col-2 time-hour">
+                    10:00 AM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+
+                <!-- 11 AM -->
+                <div class="col-2 time-hour">
+                    11:00 AM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+
+                <!-- 12 PM -->
+                <div class="col-2 time-hour">
+                    12:00 PM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+
+                <!-- 1 PM -->
+                <div class="col-2 time-hour">
+                    1:00 PM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+
+                <!-- 2 PM -->
+                <div class="col-2 time-hour">
+                    2:00 PM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+
+                <!-- 3 PM -->
+                <div class="col-2 time-hour">
+                    3:00 PM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+
+                <!-- 4 PM -->
+                <div class="col-2 time-hour">
+                    4:00 PM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+
+                <!-- 5 PM -->
+                <div class="col-2 time-hour">
+                    5:00 PM
+                </div>
+                <div class="col-8 time-description">
+                    <textarea name="" id="" cols="100" rows="5"></textarea>
+                </div>
+                <div class="col-2 time-save">
+                    <button type="submit">Submit</button>
+                </div>
+            </div>
         </div>
     </div>
 
